Add spec in CRD

--- a/config/crd/bases/jiraservicedesk.stakater.com_projects.yaml
+++ b/config/crd/bases/jiraservicedesk.stakater.com_projects.yaml
@@ -36,9 +36,56 @@ spec:
         spec:
           description: ProjectSpec defines the desired state of Project
           properties:
-            foo:
-              description: Foo is an example field of Project. Edit Project_types.go
-                to remove/update
+            assigneeType:
+              description: Task assignee type
+              enum:
+              - PROJECT_LEAD
+              - UNASSIGNED
+              type: string
+            avatarId:
+              description: An integer value for the project's avatar.
+              type: integer
+            categoryId:
+              description: The ID of the project's category
+              type: integer
+            description:
+              description: Description for project
+              type: string
+            issueSecurityScheme:
+              description: The ID of the issue security scheme for the project, which
+                enables you to control who can and cannot view issues
+              type: integer
+            key:
+              description: The project key is used as the prefix of your project's
+                issue keys
+              type: string
+            leadAccountId:
+              description: ID of project lead
+              maxLength: 128
+              type: string
+            name:
+              description: Name of the project
+              type: string
+            notificationScheme:
+              description: The ID of the notification scheme for the project
+              type: integer
+            permissionScheme:
+              description: The ID of the permission scheme for the project
+              type: integer
+            projectTemplateKey:
+              description: A prebuilt configuration for a project
+              type: string
+            projectTypeKey:
+              description: The project type, which dictates the application-specific
+                feature set
+              enum:
+              - business
+              - service_desk
+              - software
+              type: string
+            url:
+              description: A link to information about this project, such as project
+                documentation
               type: string
           type: object
         status:
