Handle get project by key, add id as status in CR, refactored code

--- a/config/crd/bases/jiraservicedesk.stakater.com_projects.yaml
+++ b/config/crd/bases/jiraservicedesk.stakater.com_projects.yaml
@@ -90,6 +90,12 @@ spec:
           type: object
         status:
           description: ProjectStatus defines the observed state of Project
+          properties:
+            id:
+              description: Jira service desk project ID
+              type: string
+          required:
+          - id
           type: object
       type: object
   version: v1alpha1
