--- a/config/samples/jiraservicedesk_v1alpha1_project.yaml
+++ b/config/samples/jiraservicedesk_v1alpha1_project.yaml
@@ -1,7 +1,13 @@
 apiVersion: jiraservicedesk.stakater.com/v1alpha1
 kind: Project
 metadata:
-  name: project-sample
+  name: stakater
 spec:
-  # Add fields here
-  foo: bar
+  name: stakater
+  key: STK
+  projectTypeKey: service_desk
+  projectTemplateKey: com.atlassian.servicedesk:itil-v2-service-desk-project
+  description: "Sample project for jira-service-desk-operator"
+  assigneeType: PROJECT_LEAD
+  leadAccountId: 5ebfbc3ead226b0ba46c3590
+  url: https://stakater.com
