--- a/config/crd/patches/webhook_in_projects.yaml
+++ b/config/crd/patches/webhook_in_projects.yaml
@@ -5,6 +5,7 @@ kind: CustomResourceDefinition
 metadata:
   name: projects.jiraservicedesk.stakater.com
 spec:
+  preserveUnknownFields: false
   conversion:
     strategy: Webhook
     webhookClientConfig:
