--- a/packagemanifests/0.0.1/jira-service-desk-operator.clusterserviceversion.yaml
+++ b/packagemanifests/0.0.1/jira-service-desk-operator.clusterserviceversion.yaml
@@ -124,6 +124,10 @@ spec:
                   value: jira-service-desk-config
                 image: stakater/jira-service-desk-operator:0.0.1
                 name: manager
+                ports:
+                - containerPort: 9443
+                  name: webhook-server
+                  protocol: TCP
                 resources:
                   limits:
                     cpu: 100m
@@ -131,7 +135,16 @@ spec:
                   requests:
                     cpu: 100m
                     memory: 20Mi
+                volumeMounts:
+                - mountPath: /tmp/k8s-webhook-server/serving-certs
+                  name: cert
+                  readOnly: true
               terminationGracePeriodSeconds: 10
+              volumes:
+              - name: cert
+                secret:
+                  defaultMode: 420
+                  secretName: webhook-server-cert
       permissions:
       - rules:
         - apiGroups:
@@ -190,3 +203,38 @@ spec:
     name: stakater
     url: https://stakater.com
   version: 0.0.1
+  webhookdefinitions:
+  - admissionReviewVersions: null
+    deploymentName: jira-service-desk-operator-webhook
+    failurePolicy: Fail
+    generateName: vproject.kb.io
+    rules:
+    - apiGroups:
+      - jiraservicedesk.stakater.com
+      apiVersions:
+      - v1alpha1
+      operations:
+      - CREATE
+      - UPDATE
+      resources:
+      - projects
+    sideEffects: null
+    type: ValidatingAdmissionWebhook
+    webhookPath: /validate-jiraservicedesk-stakater-com-v1alpha1-project
+  - admissionReviewVersions: null
+    deploymentName: jira-service-desk-operator-webhook
+    failurePolicy: Fail
+    generateName: mproject.kb.io
+    rules:
+    - apiGroups:
+      - jiraservicedesk.stakater.com
+      apiVersions:
+      - v1alpha1
+      operations:
+      - CREATE
+      - UPDATE
+      resources:
+      - projects
+    sideEffects: null
+    type: MutatingAdmissionWebhook
+    webhookPath: /mutate-jiraservicedesk-stakater-com-v1alpha1-project
