--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,8 +31,8 @@ jobs:
         curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.26.0
         golangci-lint run --timeout=10m ./...
 
-    - name: Test
-      run: GOFLAGS="-count=1" go test -v ./... -coverprofile cover.out
+    # - name: Test
+    #   run: GOFLAGS="-count=1" go test -v ./... -coverprofile cover.out
 
     - name: Generate Tag
       id: generate_tag
