--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,6 +9,7 @@ env:
   DOCKER_FILE_PATH: Dockerfile
   GOLANG_VERSION: 1.14
   OPERATOR_SDK_VERSION: "0.19.0"
+  KUSTOMIZE_VERSION: "3.5.4"
 
 jobs:
   build:
@@ -59,22 +60,47 @@ jobs:
 ## Add steps to generate required artifacts for a release here(helm chart, operator manifest etc.)
 ##############################
 
+    # Generate tag for operator without "v"
+    - name: Generate Operator Tag
+      id: generate_operator_tag
+      uses: anothrNick/github-tag-action@1.26.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.STAKATER_GITHUB_TOKEN }}
+        WITH_V: false
+        DEFAULT_BUMP: patch
+        DRY_RUN: true
+
+    # Install operator-sdk
     - name: Install operator-sdk
+      env:
+        OPERATOR_SDK_VERSION: ${{ env.OPERATOR_SDK_VERSION }}
       run: |
-        curl -fL -o /tmp/operator-sdk "https://github.com/operator-framework/operator-sdk/releases/download/v${env.OPERATOR_SDK_VERSION}/operator-sdk-v${env.OPERATOR_SDK_VERSION}-x86_64-linux-gnu"
+        curl -fL -o /tmp/operator-sdk "https://github.com/operator-framework/operator-sdk/releases/download/v${OPERATOR_SDK_VERSION}/operator-sdk-v${OPERATOR_SDK_VERSION}-x86_64-linux-gnu"
         sudo install /tmp/operator-sdk /usr/local/bin && rm -f /tmp/operator-sdk
         operator-sdk version
-        operator-sdk version | grep -q "${env.OPERATOR_SDK_VERSION}"
+        operator-sdk version | grep -q "${OPERATOR_SDK_VERSION}"
+
+    # Install kustomize
+    - uses: imranismail/setup-kustomize@v1
+      with:
+        kustomize-version: ${{ env.KUSTOMIZE_VERSION }}
 
     - name: Generate Bundle
       env:
-        VERSION: ${{ steps.generate_tag.outputs.new_tag }}
+        VERSION: ${{ steps.generate_operator_tag.outputs.new_tag }}
       run: make bundle
       
     - name: Generate Package Manifests
       env:
-        VERSION: ${{ steps.generate_tag.outputs.new_tag }}
+        VERSION: ${{ steps.generate_operator_tag.outputs.new_tag }}
       run: make packagemanifests
+
+    # Commit back changes
+    - uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: "[skip-ci] Update artifacts"
+        commit_user_name: stakater-user
+        commit_user_email: stakater@gmail.com
 
     - name: Push Latest Tag
       uses: anothrNick/github-tag-action@1.26.0
