fix token for git push

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -104,8 +104,8 @@ jobs:
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        
+        github_token: ${{ secrets.STAKATER_GITHUB_TOKEN }}
+
     - name: Push Latest Tag
       uses: anothrNick/github-tag-action@1.26.0
       env:
