--- a/bundle/manifests/jiraservicedesk.stakater.com_projects.yaml
+++ b/bundle/manifests/jiraservicedesk.stakater.com_projects.yaml
@@ -31,14 +31,10 @@ spec:
       description: Project is the Schema for the projects API
       properties:
         apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
@@ -61,12 +57,10 @@ spec:
               description: Description for project
               type: string
             issueSecurityScheme:
-              description: The ID of the issue security scheme for the project, which
-                enables you to control who can and cannot view issues
+              description: The ID of the issue security scheme for the project, which enables you to control who can and cannot view issues
               type: integer
             key:
-              description: The project key is used as the prefix of your project's
-                issue keys
+              description: The project key is used as the prefix of your project's issue keys
               type: string
             leadAccountId:
               description: ID of project lead
@@ -85,16 +79,14 @@ spec:
               description: A prebuilt configuration for a project
               type: string
             projectTypeKey:
-              description: The project type, which dictates the application-specific
-                feature set
+              description: The project type, which dictates the application-specific feature set
               enum:
               - business
               - service_desk
               - software
               type: string
             url:
-              description: A link to information about this project, such as project
-                documentation
+              description: A link to information about this project, such as project documentation
               type: string
           type: object
         status:
@@ -103,16 +95,7 @@ spec:
             conditions:
               description: Status conditions
               items:
-                description: "Condition represents an observation of an object's state.
-                  Conditions are an extension mechanism intended to be used when the
-                  details of an observation are not a priori known or would not apply
-                  to all instances of a given Kind. \n Conditions should be added
-                  to explicitly convey properties that users and components care about
-                  rather than requiring those properties to be inferred from other
-                  observations. Once defined, the meaning of a Condition can not be
-                  changed arbitrarily - it becomes part of the API, and has the same
-                  backwards- and forwards-compatibility concerns of any other part
-                  of the API."
+                description: "Condition represents an observation of an object's state. Conditions are an extension mechanism intended to be used when the details of an observation are not a priori known or would not apply to all instances of a given Kind. \n Conditions should be added to explicitly convey properties that users and components care about rather than requiring those properties to be inferred from other observations. Once defined, the meaning of a Condition can not be changed arbitrarily - it becomes part of the API, and has the same backwards- and forwards-compatibility concerns of any other part of the API."
                 properties:
                   lastTransitionTime:
                     format: date-time
@@ -120,20 +103,12 @@ spec:
                   message:
                     type: string
                   reason:
-                    description: ConditionReason is intended to be a one-word, CamelCase
-                      representation of the category of cause of the current status.
-                      It is intended to be used in concise output, such as one-line
-                      kubectl get output, and in summarizing occurrences of causes.
+                    description: ConditionReason is intended to be a one-word, CamelCase representation of the category of cause of the current status. It is intended to be used in concise output, such as one-line kubectl get output, and in summarizing occurrences of causes.
                     type: string
                   status:
                     type: string
                   type:
-                    description: "ConditionType is the type of the condition and is
-                      typically a CamelCased word or short phrase. \n Condition types
-                      should indicate state in the \"abnormal-true\" polarity. For
-                      example, if the condition indicates when a policy is invalid,
-                      the \"is valid\" case is probably the norm, so the condition
-                      should be called \"Invalid\"."
+                    description: "ConditionType is the type of the condition and is typically a CamelCased word or short phrase. \n Condition types should indicate state in the \"abnormal-true\" polarity. For example, if the condition indicates when a policy is invalid, the \"is valid\" case is probably the norm, so the condition should be called \"Invalid\"."
                     type: string
                 required:
                 - status
