--- a/bundle/tests/scorecard/config.yaml
+++ b/bundle/tests/scorecard/config.yaml
@@ -1,49 +1,49 @@
+apiVersion: scorecard.operatorframework.io/v1alpha3
 kind: Configuration
-apiversion: scorecard.operatorframework.io/v1alpha3
 metadata:
-    name: config
+  name: config
 stages:
-  - parallel: true
-    tests:
-    - image: quay.io/operator-framework/scorecard-test:master
-      entrypoint:
-        - scorecard-test
-        - basic-check-spec
-      labels:
-          suite: basic
-          test: basic-check-spec-test
-    - image: quay.io/operator-framework/scorecard-test:master
-      entrypoint:
-        - scorecard-test
-        - olm-bundle-validation
-      labels:
-          suite: olm
-          test: olm-bundle-validation-test
-    - image: quay.io/operator-framework/scorecard-test:master
-      entrypoint:
-        - scorecard-test
-        - olm-crds-have-validation
-      labels:
-          suite: olm
-          test: olm-crds-have-validation-test
-    - image: quay.io/operator-framework/scorecard-test:master
-      entrypoint:
-        - scorecard-test
-        - olm-crds-have-resources
-      labels:
-          suite: olm
-          test: olm-crds-have-resources-test
-    - image: quay.io/operator-framework/scorecard-test:master
-      entrypoint:
-        - scorecard-test
-        - olm-spec-descriptors
-      labels:
-          suite: olm
-          test: olm-spec-descriptors-test
-    - image: quay.io/operator-framework/scorecard-test:master
-      entrypoint:
-        - scorecard-test
-        - olm-status-descriptors
-      labels:
-          suite: olm
-          test: olm-status-descriptors-test
+- parallel: true
+  tests:
+  - entrypoint:
+    - scorecard-test
+    - basic-check-spec
+    image: quay.io/operator-framework/scorecard-test:master
+    labels:
+      suite: basic
+      test: basic-check-spec-test
+  - entrypoint:
+    - scorecard-test
+    - olm-bundle-validation
+    image: quay.io/operator-framework/scorecard-test:master
+    labels:
+      suite: olm
+      test: olm-bundle-validation-test
+  - entrypoint:
+    - scorecard-test
+    - olm-crds-have-validation
+    image: quay.io/operator-framework/scorecard-test:master
+    labels:
+      suite: olm
+      test: olm-crds-have-validation-test
+  - entrypoint:
+    - scorecard-test
+    - olm-crds-have-resources
+    image: quay.io/operator-framework/scorecard-test:master
+    labels:
+      suite: olm
+      test: olm-crds-have-resources-test
+  - entrypoint:
+    - scorecard-test
+    - olm-spec-descriptors
+    image: quay.io/operator-framework/scorecard-test:master
+    labels:
+      suite: olm
+      test: olm-spec-descriptors-test
+  - entrypoint:
+    - scorecard-test
+    - olm-status-descriptors
+    image: quay.io/operator-framework/scorecard-test:master
+    labels:
+      suite: olm
+      test: olm-status-descriptors-test
