--- a/bundle/manifests/jira-service-desk-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/jira-service-desk-operator.clusterserviceversion.yaml
@@ -25,7 +25,7 @@ metadata:
     capabilities: Basic Install
     operators.operatorframework.io/builder: operator-sdk-v1.0.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
-  name: jira-service-desk-operator.v0.0.1
+  name: jira-service-desk-operator.v0.0.2
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -195,7 +195,8 @@ spec:
   provider:
     name: stakater
     url: https://stakater.com
-  version: 0.0.1
+  replaces: jira-service-desk-operator.v0.0.1
+  version: 0.0.2
   webhookdefinitions:
   - admissionReviewVersions: null
     deploymentName: jira-service-desk-operator-webhook
