--- a/config/manifests/bases/jira-service-desk-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/jira-service-desk-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     operators.operatorframework.io/builder: operator-sdk-v1.0.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
   name: jira-service-desk-operator.vX.Y.Z
-  namespace: placeholder
+  namespace: jira-service-desk-operator
 spec:
   apiservicedefinitions: {}
   customresourcedefinitions:
