--- a/packagemanifests/0.0.1/jira-service-desk-operator.clusterserviceversion.yaml
+++ b/packagemanifests/0.0.1/jira-service-desk-operator.clusterserviceversion.yaml
@@ -26,7 +26,7 @@ metadata:
     operators.operatorframework.io/builder: operator-sdk-v1.0.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
   name: jira-service-desk-operator.v0.0.1
-  namespace: placeholder
+  namespace: jira-service-desk-operator
 spec:
   apiservicedefinitions: {}
   customresourcedefinitions:
