--- a/bundle/manifests/jira-service-desk-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/jira-service-desk-operator.clusterserviceversion.yaml
@@ -115,7 +115,7 @@ spec:
                       fieldPath: metadata.annotations['olm.targetNamespaces']
                 - name: CONFIG_SECRET_NAME
                   value: jira-service-desk-config
-                image: stakater/jira-service-desk-operator:SNAPSHOT-PR-12-dac3814b
+                image: stakater/jira-service-desk-operator:v0.0.1
                 name: manager
                 ports:
                 - containerPort: 9443
