--- a/bundle/manifests/jira-service-desk-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/jira-service-desk-operator.clusterserviceversion.yaml
@@ -25,7 +25,7 @@ metadata:
     capabilities: Basic Install
     operators.operatorframework.io/builder: operator-sdk-v1.0.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
-  name: jira-service-desk-operator.v0.0.3
+  name: jira-service-desk-operator.v0.0.1
   namespace: jira-service-desk-operator
 spec:
   apiservicedefinitions: {}
@@ -115,7 +115,7 @@ spec:
                       fieldPath: metadata.annotations['olm.targetNamespaces']
                 - name: CONFIG_SECRET_NAME
                   value: jira-service-desk-config
-                image: stakater/jira-service-desk-operator:v0.0.1
+                image: stakater/jira-service-desk-operator:0.0.1
                 name: manager
                 ports:
                 - containerPort: 9443
@@ -195,8 +195,7 @@ spec:
   provider:
     name: stakater
     url: https://stakater.com
-  replaces: jira-service-desk-operator.v0.0.2
-  version: 0.0.3
+  version: 0.0.1
   webhookdefinitions:
   - admissionReviewVersions: null
     deploymentName: jira-service-desk-operator-webhook
