--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -56,6 +56,7 @@ jobs:
         kubectl create namespace test
         echo "${{ secrets.SECRET_KUBERNETES_RESOURCES }}"> kube.yaml
         kubectl apply -f kube.yaml
+        rm -f kube.yaml
         
     - name: Test
       run: make test OPERATOR_NAMESPACE=test USE_EXISTING_CLUSTER=true
