--- a/config/samples/jiraservicedesk_v1alpha1_customer.yaml
+++ b/config/samples/jiraservicedesk_v1alpha1_customer.yaml
@@ -1,7 +1,12 @@
 apiVersion: jiraservicedesk.stakater.com/v1alpha1
 kind: Customer
 metadata:
-  name: customer-sample
+  name: customer
+  namespace: default
 spec:
-  # Add fields here
-  foo: bar
+  name: testCustomer
+  email: testCustomer@test.com
+  projects:
+    - KEY1
+    - KEY2
+    - KEY3
