--- a/examples/customer/customer.yaml
+++ b/examples/customer/customer.yaml
@@ -2,11 +2,9 @@ apiVersion: jiraservicedesk.stakater.com/v1alpha1
 kind: Customer
 metadata:
   name: customer
-  namespace: default
 spec:
-  name: testCustomer
-  email: testCustomer@test.com
+  name: sample
+  email: samplecustomer@sample.com
   projects:
-    - KEY1
-    - KEY2
-    - KEY3
+    - TEST1
+    - TEST2
