--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Install kubectl
       run: |
         curl -LO "https://storage.googleapis.com/kubernetes-release/release/v${KUBERNETES_VERSION}/bin/linux/amd64/kubectl"
-        sudo install ./kubectl /usr/local/bin/
+        sudo install ./kubectl /usr/local/bin/ && rm kubectl
         kubectl version --short --client
         kubectl version --short --client | grep -q ${KUBERNETES_VERSION}
 
