--- a/config/crd/bases/jiraservicedesk.stakater.com_projects.yaml
+++ b/config/crd/bases/jiraservicedesk.stakater.com_projects.yaml
@@ -48,9 +48,6 @@ spec:
             categoryId:
               description: The ID of the project's category
               type: integer
-            customerAccessStatus:
-              description: The Custermer Access Status of a project
-              type: boolean
             description:
               description: Description for project
               type: string
@@ -86,6 +83,9 @@ spec:
               - service_desk
               - software
               type: string
+            serviceDeskOpenAccess:
+              description: The Access status of the project
+              type: boolean
             url:
               description: A link to information about this project, such as project
                 documentation
