--- a/config/crd/bases/jiraservicedesk.stakater.com_projects.yaml
+++ b/config/crd/bases/jiraservicedesk.stakater.com_projects.yaml
@@ -14,7 +14,7 @@ spec:
     listKind: ProjectList
     plural: projects
     singular: project
-  scope: Cluster
+  scope: Namespaced
   subresources:
     status: {}
   validation:
