--- a/bundle/manifests/jiraservicedesk.stakater.com_projects.yaml
+++ b/bundle/manifests/jiraservicedesk.stakater.com_projects.yaml
@@ -61,6 +61,8 @@ spec:
               type: integer
             key:
               description: The project key is used as the prefix of your project's issue keys
+              maxLength: 10
+              pattern: ^[A-Z][a-zA-Z0-9]+$
               type: string
             leadAccountId:
               description: ID of project lead
