Update webhook cert value in helm chart

--- a/charts/jira-service-desk-operator/values.yaml
+++ b/charts/jira-service-desk-operator/values.yaml
@@ -12,11 +12,11 @@ fullnameOverride: ""
 watchNamespaces: []
 configSecretName: "jira-service-desk-config"
 
-tlsSecretName: ""
-
 # Webhook Configuration
 webhook:
   enabled: true
+  certs:
+    secret: ""
 
 service:
   type: ClusterIP
