--- a/charts/jira-service-desk-operator/templates/deployment.yaml
+++ b/charts/jira-service-desk-operator/templates/deployment.yaml
@@ -45,6 +45,8 @@ spec:
         command:
         - /manager
         env:
+        - name: WATCH_NAMESPACE
+          value: {{ .Values.watchNamespaces | join "," | quote }}
         - name: CONFIG_SECRET_NAME
           value: "{{ default "jira-service-desk-config" .Values.configSecretName }}"
         - name: ENABLE_WEBHOOKS
