--- a/charts/jira-service-desk-operator/templates/validating-webhook.yaml
+++ b/charts/jira-service-desk-operator/templates/validating-webhook.yaml
@@ -4,7 +4,7 @@ apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
   annotations:
-    cert-manager.io/inject-ca-from: {{ .Release.Namespace }}r/{{ include "jira-service-desk-operator.fullname" . }}--serving-cert
+    cert-manager.io/inject-ca-from: {{ .Release.Namespace }}/{{ include "jira-service-desk-operator.fullname" . }}--serving-cert
   creationTimestamp: null
   name: {{ include "jira-service-desk-operator.fullname" . }}--validating-webhook-configuration
 webhooks:
