--- a/charts/jira-service-desk-operator/templates/certificate.yaml
+++ b/charts/jira-service-desk-operator/templates/certificate.yaml
@@ -1,4 +1,12 @@
-{{- if .Values.webhook.enabled -}}
+{{- if not (.Capabilities.APIVersions.Has "jiraservicedesk.stakater.com/v1alpha1") -}}
+    {{- fail "Required CRDs are missing, jira-service-desk-operator-crds chart is a pre-requisite of this chart" }}
+{{ end }}
+
+{{- if .Values.webhook.enabled }}
+
+{{- if not (.Capabilities.APIVersions.Has "cert-manager.io/v1alpha2") -}}
+    {{- fail "cert-manager is not installed" }}
+{{ end }}
 ---
 apiVersion: cert-manager.io/v1alpha2
 kind: Issuer
@@ -20,5 +28,5 @@ spec:
   issuerRef:
     kind: Issuer
     name: {{ include "jira-service-desk-operator.fullname" . }}-selfsigned-issuer
-  secretName:  {{ include "jira-service-desk-operator.tlsSecretName" . }}
+  secretName:  webhook-server-cert
 {{- end -}}
