--- a/charts/jira-service-desk-operator/templates/deployment.yaml
+++ b/charts/jira-service-desk-operator/templates/deployment.yaml
@@ -1,3 +1,7 @@
+{{- if not (.Capabilities.APIVersions.Has "jiraservicedesk.stakater.com/v1alpha1") -}}
+    {{- fail "Required CRDs are missing, jira-service-desk-operator-crds chart is a pre-requisite of this chart" }}
+{{ end }}
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -69,7 +73,7 @@ spec:
       - name: cert
         secret:
           defaultMode: 420
-          secretName:  {{ include "jira-service-desk-operator.tlsSecretName" . }}
+          secretName:  webhook-server-cert
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
