--- a/charts/jira-service-desk-operator/templates/validating-webhook.yaml
+++ b/charts/jira-service-desk-operator/templates/validating-webhook.yaml
@@ -1,12 +1,16 @@
+{{- if not (.Capabilities.APIVersions.Has "jiraservicedesk.stakater.com/v1alpha1") -}}
+    {{- fail "Required CRDs are missing, jira-service-desk-operator-crds chart is a pre-requisite of this chart" }}
+{{ end }}
+
 {{- if .Values.webhook.enabled -}}
 ---
 apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
   annotations:
-    cert-manager.io/inject-ca-from: {{ .Release.Namespace }}/{{ include "jira-service-desk-operator.fullname" . }}--serving-cert
+    cert-manager.io/inject-ca-from: {{ .Release.Namespace }}/{{ include "jira-service-desk-operator.fullname" . }}-serving-cert
   creationTimestamp: null
-  name: {{ include "jira-service-desk-operator.fullname" . }}--validating-webhook-configuration
+  name: {{ include "jira-service-desk-operator.fullname" . }}-validating-webhook-configuration
 webhooks:
   - clientConfig:
       caBundle: Cg==
