--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -140,18 +140,12 @@ jobs:
       env:
         VERSION: ${{ steps.generate_operator_tag.outputs.new_tag }}
       run: make bundle
-
+      
     # Update chart tag to the latest semver tag
     - name: Update Chart Version
-      run: |
-        sed -i "s/^version:.*$/version:  ${{ steps.generate_operator_tag.outputs.new_tag }}/" charts/jira-service-desk-operator/Chart.yaml
-        sed -i "s/^appVersion:.*$/appVersion:  ${{ steps.generate_operator_tag.outputs.new_tag }}/" charts/jira-service-desk-operator/Chart.yaml
-        sed -i "s/tag:.*$/tag:  v${{ steps.generate_operator_tag.outputs.new_tag }}/" charts/jira-service-desk-operator/values.yaml
-
-    # Update CRDs for helm chart
-    - name: Update CRDs for Chart
-      run: |
-        make generate-helm-chart-manifests
+      env:
+        VERSION: ${{ steps.generate_operator_tag.outputs.new_tag }}
+      run: make bump-chart
 
     # Commit back changes
     - name: Commit files
@@ -161,6 +155,7 @@ jobs:
         git status 
         git add .
         git commit -m "[skip-ci] Update artifacts" -a
+
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
