--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -140,6 +140,9 @@ jobs:
       env:
         VERSION: ${{ steps.generate_operator_tag.outputs.new_tag }}
       run: make bundle
+
+    - name: Update Chart CRDs
+      run: make generate-crds
       
     # Update chart tag to the latest semver tag
     - name: Update Chart Version
