Update legacy customer example

--- a/examples/customer/legacy-customer.yaml
+++ b/examples/customer/legacy-customer.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   name: Legacy Customer
   email: legacycustomer@sample.com
-  legacyCustomer: false
+  legacyCustomer: true
   projects:
     - TEST1
     - TEST2
