--- a/config/crd/bases/jiraservicedesk.stakater.com_projects.yaml
+++ b/config/crd/bases/jiraservicedesk.stakater.com_projects.yaml
@@ -93,6 +93,7 @@ spec:
             url:
               description: A link to information about this project, such as project
                 documentation
+              pattern: (http|ftp|https)://([a-zA-Z0-9~!@#$%^&*()_=+/?.:;',-]*)?
               type: string
           type: object
         status:
