Required fields updated in CRDs

--- a/config/crd/bases/jiraservicedesk.stakater.com_customers.yaml
+++ b/config/crd/bases/jiraservicedesk.stakater.com_customers.yaml
@@ -57,6 +57,9 @@ spec:
                 type: string
               minItems: 1
               type: array
+          required:
+          - email
+          - name
           type: object
         status:
           description: CustomerStatus defines the observed state of Customer
