--- a/config/crd/bases/jiraservicedesk.stakater.com_projects.yaml
+++ b/config/crd/bases/jiraservicedesk.stakater.com_projects.yaml
@@ -95,6 +95,14 @@ spec:
                 documentation
               pattern: (http|ftp|https)://([a-zA-Z0-9~!@#$%^&*()_=+/?.:;',-]*)?
               type: string
+          required:
+          - assigneeType
+          - description
+          - key
+          - leadAccountId
+          - name
+          - projectTemplateKey
+          - projectTypeKey
           type: object
         status:
           description: ProjectStatus defines the observed state of Project
