--- a/bundle/manifests/jiraservicedesk.stakater.com_projects.yaml
+++ b/bundle/manifests/jiraservicedesk.stakater.com_projects.yaml
@@ -94,6 +94,14 @@ spec:
               description: A link to information about this project, such as project documentation
               pattern: (http|ftp|https)://([a-zA-Z0-9~!@#$%^&*()_=+/?.:;',-]*)?
               type: string
+          required:
+          - assigneeType
+          - description
+          - key
+          - leadAccountId
+          - name
+          - projectTemplateKey
+          - projectTypeKey
           type: object
         status:
           description: ProjectStatus defines the observed state of Project
