Add required validation for projectlist in customer

--- a/charts/jira-service-desk-operator/crds/jiraservicedesk.stakater.com_customers.yaml
+++ b/charts/jira-service-desk-operator/crds/jiraservicedesk.stakater.com_customers.yaml
@@ -60,6 +60,7 @@ spec:
           required:
           - email
           - name
+          - projects
           type: object
         status:
           description: CustomerStatus defines the observed state of Customer
